--- a/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-seller-page/marketplace-dashboard-seller-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-seller-page/marketplace-dashboard-seller-page.component.html
@@ -98,8 +98,8 @@
                             product?.price
                               ? (
                                   product.price
-                                  | currency : "ARS" : "symbol" : "1.0-2"
-                                ).split(",")[0]
+                                  | currency : "USD" : "symbol-narrow" : "1.0-2"
+                                ).split(".")[0]
                               : ""
                           }}
                         </span>
@@ -112,8 +112,11 @@
                                 ? "," +
                                   ((
                                     product.price
-                                    | currency : "ARS" : "symbol" : "1.0-2"
-                                  ).split(",")[1] || "00")
+                                    | currency
+                                      : "USD"
+                                      : "symbol-narrow"
+                                      : "1.0-2"
+                                  ).split(".")[1] || "00")
                                 : ""
                             }}
                           </span>
@@ -266,8 +269,8 @@
                           purchase.product?.price
                             ? (
                                 purchase.product.price
-                                | currency : "ARS" : "symbol" : "1.0-2"
-                              ).split(",")[0]
+                                | currency : "USD" : "symbol-narrow" : "1.0-2"
+                              ).split(".")[0]
                             : ""
                         }}
                       </span>
@@ -280,8 +283,8 @@
                               ? "," +
                                 ((
                                   purchase.product.price
-                                  | currency : "ARS" : "symbol" : "1.0-2"
-                                ).split(",")[1] || "00")
+                                  | currency : "USD" : "symbol-narrow" : "1.0-2"
+                                ).split(".")[1] || "00")
                               : ""
                           }}
                         </span>
