fix: support for worker backgorund image

--- a/webapp/front/front/src/app/features/service-providers/service-providers-content/service-providers-content.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-content/service-providers-content.component.html
@@ -16,7 +16,7 @@
       <img
         class="back-image"
         [src]="backgroundImageUrl"
-        alt="profile_picture_img"
+        alt="profile_background_picture_img"
       />
     </div>
     <div
